--- a/New Chess/res/values/strings.xml
+++ b/New Chess/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, MainActivity!</string>
-    <string name="app_name">Pocket Chess</string>
+    <string name="app_name">Pocket Chess For Android</string>
     <string name="please_choose_white">Please choose white piece</string>
     <string name="please_choose_black">Please choose black piece</string>
     <string name="illegal_move_try_again">Illegal move, try again</string>
